Support loading of resources in "packages" other than the module packages Switch to loading resources from jimage using /$MODULE/$NAME keys URL scheme for jar and jmod artifacts should not be "file"